--- a/flamingo/auto_plotter/stellar_mass_halo_mass.yml
+++ b/flamingo/auto_plotter/stellar_mass_halo_mass.yml
@@ -4,7 +4,7 @@ stellar_mass_halo_mass_all_100:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 3e10
+    start: 3e9
     end: 3e14
   y:
     quantity: "apertures.mass_star_100_kpc"
@@ -14,7 +14,7 @@ stellar_mass_halo_mass_all_100:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
       value: 3e10
       units: Solar_Mass
@@ -37,7 +37,7 @@ stellar_mass_halo_mass_centrals_100:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 3e10
+    start: 3e9
     end: 3e14
   y:
     quantity: "apertures.mass_star_100_kpc"
@@ -47,9 +47,9 @@ stellar_mass_halo_mass_centrals_100:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 3e10
+      value: 3e9
       units: Solar_Mass
     end:
       value: 3e14
@@ -70,7 +70,7 @@ stellar_mass_halo_mass_centrals_ratio_100:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 3e10
+    start: 3e9
     end: 3e14
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_100_kpc"
@@ -80,9 +80,9 @@ stellar_mass_halo_mass_centrals_ratio_100:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 3e10
+      value: 3e9
       units: Solar_Mass
     end:
       value: 3e14
@@ -103,7 +103,7 @@ stellar_mass_halo_mass_centrals_ratio_stellar_100:
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_100_kpc"
@@ -113,9 +113,9 @@ stellar_mass_halo_mass_centrals_ratio_stellar_100:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
@@ -134,7 +134,7 @@ stellar_mass_halo_mass_all_30:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 3e10
+    start: 3e9
     end: 3e14
   y:
     quantity: "apertures.mass_star_30_kpc"
@@ -144,9 +144,9 @@ stellar_mass_halo_mass_all_30:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 3e10
+      value: 3e9
       units: Solar_Mass
     end:
       value: 1e14
@@ -168,7 +168,7 @@ stellar_mass_halo_mass_centrals_30:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 3e10
+    start: 3e9
     end: 3e14
   y:
     quantity: "apertures.mass_star_30_kpc"
@@ -178,9 +178,9 @@ stellar_mass_halo_mass_centrals_30:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 3e10
+      value: 3e9
       units: Solar_Mass
     end:
       value: 1e14
@@ -202,7 +202,7 @@ stellar_mass_halo_mass_centrals_ratio_30:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 3e10
+    start: 3e9
     end: 3e14
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_30_kpc"
@@ -212,9 +212,9 @@ stellar_mass_halo_mass_centrals_ratio_30:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 3e10
+      value: 3e9
       units: Solar_Mass
     end:
       value: 1e14
@@ -236,7 +236,7 @@ stellar_mass_halo_mass_centrals_ratio_stellar_30:
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_30_kpc"
@@ -246,9 +246,9 @@ stellar_mass_halo_mass_centrals_ratio_stellar_30:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
@@ -268,20 +268,20 @@ stellar_mass_halo_mass_MBN98_all_100:
   x:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
-    start: 1e10
+    start: 1e9
     end: 3e15
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e10
+      value: 1e9
       units: Solar_Mass
     end:
       value: 1e15
@@ -294,26 +294,59 @@ stellar_mass_halo_mass_MBN98_all_100:
     - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
 
+stellar_mass_halo_mass_MBN98_all_50:
+  type: "2dhistogram"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e9
+    end: 3e15
+  y:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e9 
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (50 kpc aperture, M$_{\rm BN98}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+
 stellar_mass_halo_mass_MBN98_all_30:
   type: "2dhistogram"
   legend_loc: "lower right"
   x:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
-    start: 1e10
+    start: 1e9
     end: 1e15
   y:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e10
+      value: 1e9
       units: Solar_Mass
     end:
       value: 1e15
@@ -339,15 +372,15 @@ stellar_mass_halo_mass_MBN98_centrals_100:
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e10
+      value: 1e9
       units: Solar_Mass
     end:
       value: 1e15
@@ -360,6 +393,41 @@ stellar_mass_halo_mass_MBN98_centrals_100:
     - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
 
+stellar_mass_halo_mass_MBN98_centrals_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e9
+    end: 3e14
+  y:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (50 kpc aperture, centrals only, M$_{\rm BN98}$)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+
 stellar_mass_halo_mass_MBN98_centrals_30:
   type: "2dhistogram"
   select_structure_type: 10
@@ -368,20 +436,20 @@ stellar_mass_halo_mass_MBN98_centrals_30:
   x:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
-    start: 1e10
+    start: 1e9
     end: 1e15
   y:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e10
+      value: 1e9
       units: Solar_Mass
     end:
       value: 1e15
@@ -402,7 +470,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
@@ -415,13 +483,47 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
     adapive: true
     number_of_bins: 30
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adapive: true
+    number_of_bins: 30
+    start:
+      value: 1e8 
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -436,7 +538,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_30:
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
@@ -449,7 +551,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_30:
     adapive: true
     number_of_bins: 30
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
@@ -470,7 +572,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_100:
   x:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
-    start: 1e10
+    start: 1e9
     end: 1e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
@@ -483,13 +585,47 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_100:
     adaptive: true
     number_of_bins: 30
     start:
-      value: 1e10
+      value: 1e9
       units: Solar_Mass
     end:
       value: 1e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_Ratio.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e15
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, $M_{\rm BN98}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -504,7 +640,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_30:
   x:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
-    start: 1e10
+    start: 1e9
     end: 1e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
@@ -517,7 +653,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_30:
     adaptive: true
     number_of_bins: 30
     start:
-      value: 1e10
+      value: 1e9
       units: Solar_Mass
     end:
       value: 1e15
