--- a/colibre-zooms/auto_plotter/metallicity.yml
+++ b/colibre-zooms/auto_plotter/metallicity.yml
@@ -608,3 +608,64 @@ stellar_mass_star_fe_over_h_lom_100:
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
 
 
+stellar_mass_star_mg_over_fe_100:
+  type: "scatter"
+  legend_loc: "lower left"
+  y:
+    quantity: "derived_quantities.star_magnesium_over_iron_100_kpc"
+    units: "dimensionless"
+    start: -0.2
+    end: 0.4
+    log: false
+  x:
+    quantity: "apertures.mass_star_100_kpc"
+    units: solar_mass
+    start: 1e8
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 20
+    start:
+      value: 1e8
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: 'Stellar mass - [Mg/Fe]$_*$ relation (100 kpc aperture)'
+    section: Stellar Metallicity
+    caption: '[Mg/Fe] versus stellar mass, both computed in 100-kpc apertures. The values of [Mg/Fe] are obtained by computing the (log10 of) ratio between the total Magnesium mass in stars and total Iron mass in stars, and then normalising it by the corresponding solar abundances. The solar abundances are taken from Asplund et al. (2009). All haloes are plotted, including subhaloes.'
+
+
+stellar_mass_star_o_over_fe_100:
+  type: "scatter"
+  legend_loc: "lower left"
+  y:
+    quantity: "derived_quantities.star_oxygen_over_iron_100_kpc"
+    units: "dimensionless"
+    start: 0.0
+    end: 0.5
+    log: false
+  x:
+    quantity: "apertures.mass_star_100_kpc"
+    units: solar_mass
+    start: 1e8
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 20
+    start:
+      value: 1e8
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: 'Stellar mass - [O/Fe]$_*$ relation (100 kpc aperture)'
+    section: Stellar Metallicity
+    caption: '[O/Fe] versus stellar mass, both computed in 100-kpc apertures. The values of [O/Fe] are obtained by computing the (log10 of) ratio between the total Oxygen mass in stars and total Iron mass in stars, and then normalising it by the corresponding solar abundances. The solar abundances are taken from Asplund et al. (2009). All haloes are plotted, including subhaloes.'
+
