--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -198,6 +198,16 @@ scripts:
     title: Wall-clock time per time-bin
     section: Run Performance
     output_file: wallclock_timebin_hist.png
+  - filename: scripts/deadtime_timebin_hist.py
+    caption: Dead time fraction in each simulation time-bin.
+    title: Deadtime fraction per time-bin
+    section: Run Performance
+    output_file: deadtime_timebin_hist.png
+  - filename: scripts/stepsize_deadtime.py
+    caption: Dead time fraction as a function of number of updates per rank.
+    title: Step size vs deadtime fraction
+    section: Run Performance
+    output_file: stepsize_deadtime.png
   - filename: scripts/density_temperature_species.py
     caption: Density-temperature diagram shaded by H$_2$ mass fraction. The fraction is computed as the H$_2$ mass contained in each cell over the mass of gas in that cell.
     output_file: subgrid_density_temperature_H2.png
