--- a/flamingo/config.yml
+++ b/flamingo/config.yml
@@ -151,4 +151,13 @@ scripts:
     title: Wall-clock time per time-bin
     section: Run Performance
     output_file: wallclock_timebin_hist.png
-
+  - filename: scripts/deadtime_timebin_hist.py
+    caption: Dead time fraction in each simulation time-bin.
+    title: Deadtime fraction per time-bin
+    section: Run Performance
+    output_file: deadtime_timebin_hist.png
+  - filename: scripts/stepsize_deadtime.py
+    caption: Dead time fraction as a function of number of updates per rank.
+    title: Step size vs deadtime fraction
+    section: Run Performance
+    output_file: stepsize_deadtime.png
